# ROSS

./: README.md
blockchain/: Cargo.toml
blockchain/src/: main.rs
blockchain/src/models/: block.rs  blockchain.rs
blockchain/src/p2p/: client.rs  mod.rs  node.rs
substrate-front-end-template/: package.json  pnpm-lock.yaml
substrate-front-end-template/public/: index.html
substrate-front-end-template/public/assets/: main.css
substrate-front-end-template/src/: AccountSelector.js  App.js  Balances.js  NodeInfo.js  TransactionHistory.js  Transfer.js
substrate-front-end-template/src/icons/: profile-icon.js
substrate-front-end-template/src/styles/: account-selector.css
substrate-front-end-template/src/substrate-lib/components/: TxButton.js
substrate-node-template/node/src/: chain_spec.rs
substrate-node-template/runtime/src/: lib.rs
