[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3.30"
libp2p = { version = "0.53.2", features = [
	"tokio",
	"gossipsub",
	"request-response",
	"mdns",
	"macros",
	"cbor",
	"tcp",
	"yamux",
	"noise",
] }
chrono = "0.4"
sha2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.12.0"
